dataset1235/2025-2/805158916/users/644501727/executions/2118643220_1106645573.log
== SUBMISSION (2025-09-01 14:05:05)
-- CODE: 
vr = float(input("Digite o numero:"))
vc = 2.96
vc = vc * vr
print(round(dr,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(dr,2))
                ^^
NameError: name 'dr' is not defined. Did you mean: 'vr'?
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(dr,2))
                ^^
NameError: name 'dr' is not defined. Did you mean: 'vr'?
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(dr,2))
                ^^
NameError: name 'dr' is not defined. Did you mean: 'vr'?
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(dr,2))
                ^^
NameError: name 'dr' is not defined. Did you mean: 'vr'?
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(dr,2))
                ^^
NameError: name 'dr' is not defined. Did you mean: 'vr'?
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(dr,2))
                ^^
NameError: name 'dr' is not defined. Did you mean: 'vr'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:06:28)
-- CODE: 
vr = float(input("Digite um numero:"))
vc = 3.61
vc = vc * vr
print (round(vc,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
---- user output:
Digite um numero:3.61
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
---- user output:
Digite um numero:7.22
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
---- user output:
Digite um numero:50.54
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
---- user output:
Digite um numero:32.49
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
---- user output:
Digite um numero:68.59
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
---- user output:
Digite um numero:28.88
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:06:10)
-- CODE: 
vr = float(input("Digite um numero:"))
vc = 2.96
vc = vc * vr
print (round(vc,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
---- user output:
Digite um numero:2.96
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
---- user output:
Digite um numero:5.92
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
---- user output:
Digite um numero:41.44
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
---- user output:
Digite um numero:26.64
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
---- user output:
Digite um numero:56.24
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
---- user output:
Digite um numero:23.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:05:49)
-- CODE: 
vr = float(input("Digite um numero:"))
vc = 2.96
vc = vc * vr
print (round(vc,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
---- user output:
Digite um numero:2.96
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
---- user output:
Digite um numero:5.92
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
---- user output:
Digite um numero:41.44
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
---- user output:
Digite um numero:26.64
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
---- user output:
Digite um numero:56.24
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
---- user output:
Digite um numero:23.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:06:08)
-- CODE: 
vr = float(input("Digite um numero:"))
vc = 2.96
vc = vc * vr
print (round(vc,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
---- user output:
Digite um numero:2.96
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
---- user output:
Digite um numero:5.92
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
---- user output:
Digite um numero:41.44
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
---- user output:
Digite um numero:26.64
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
---- user output:
Digite um numero:56.24
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
---- user output:
Digite um numero:23.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:05:07)
-- CODE: 
vr = float(input("Digite o numero:"))
vc = 2.96
vc = vc * vr
print(round(dr,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(dr,2))
                ^^
NameError: name 'dr' is not defined. Did you mean: 'vr'?
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(dr,2))
                ^^
NameError: name 'dr' is not defined. Did you mean: 'vr'?
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(dr,2))
                ^^
NameError: name 'dr' is not defined. Did you mean: 'vr'?
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(dr,2))
                ^^
NameError: name 'dr' is not defined. Did you mean: 'vr'?
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(dr,2))
                ^^
NameError: name 'dr' is not defined. Did you mean: 'vr'?
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(dr,2))
                ^^
NameError: name 'dr' is not defined. Did you mean: 'vr'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:06:08)
-- CODE: 
vr = float(input("Digite um numero:"))
vc = 2.96
vc = vc * vr
print (round(vc,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
---- user output:
Digite um numero:2.96
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
---- user output:
Digite um numero:5.92
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
---- user output:
Digite um numero:41.44
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
---- user output:
Digite um numero:26.64
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
---- user output:
Digite um numero:56.24
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
---- user output:
Digite um numero:23.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:04:25)
-- CODE: 
dc = float(input("Digite o numero:"))
dr = 2.96
dr = dr * dc
print(round(dr,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
---- user output:
Digite o numero:2.96
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
---- user output:
Digite o numero:5.92
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
---- user output:
Digite o numero:41.44
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
---- user output:
Digite o numero:26.64
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
---- user output:
Digite o numero:56.24
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
---- user output:
Digite o numero:23.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:05:50)
-- CODE: 
vr = float(input("Digite um numero:"))
vc = 2.96
vc = vc * vr
print (round(vc,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
---- user output:
Digite um numero:2.96
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
---- user output:
Digite um numero:5.92
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
---- user output:
Digite um numero:41.44
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
---- user output:
Digite um numero:26.64
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
---- user output:
Digite um numero:56.24
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
---- user output:
Digite um numero:23.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:05:32)
-- CODE: 
vr = float(input("Digite o numero:"))
vc = 2.96
vc = vc * vr
print (round(vc,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
3.61
---- user output:
Digite o numero:2.96
-- TEST CASE 2:
---- input:
2
---- correct output:
7.22
---- user output:
Digite o numero:5.92
-- TEST CASE 3:
---- input:
14
---- correct output:
50.54
---- user output:
Digite o numero:41.44
-- TEST CASE 4:
---- input:
9
---- correct output:
32.49
---- user output:
Digite o numero:26.64
-- TEST CASE 5:
---- input:
19
---- correct output:
68.59
---- user output:
Digite o numero:56.24
-- TEST CASE 6:
---- input:
8
---- correct output:
28.88
---- user output:
Digite o numero:23.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
